# wallet

./: .dockerignore  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  conf-testnet.toml  config.toml  dumped_wallet.json  ws.ts
.github/workflows/: docker.yml  release.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/contract1/: Cargo.toml  contract1.img  contract1.txt
contracts/contract1/examples/: host.rs
contracts/contract1/src/: indexer.rs  lib.rs  main.rs
contracts/contract1/src/client/: tx_executor_handler.rs
contracts/contract2/: Cargo.toml  contract2.img  contract2.txt
contracts/contract2/examples/: host.rs
contracts/contract2/src/: indexer.rs  lib.rs  main.rs
contracts/contract2/src/client/: tx_executor_handler.rs
contracts/wallet/: Cargo.toml  contract1.img  contract1.txt  wallet.img  wallet.txt
contracts/wallet/examples/: host.rs
contracts/wallet/src/: lib.rs  main.rs  smt.rs  utils.rs
contracts/wallet/src/client/: indexer.rs  light_executor.rs  mod.rs  tx_executor_handler.rs
front/: .env  .env.production  README-Docker-Config.md  bun.lockb  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
front/src/: App.css  App.tsx  index.css  main.tsx
front/src/components/: AdminPage.tsx  Dashboard.css  Dashboard.tsx  ErrorMessage.tsx  WalletShowcase.tsx
front/src/components/auth/: AuthMethod.css  AuthMethodSelector.tsx  CreateWallet.tsx  LoginWallet.tsx
front/src/components/common/: LoadingErrorState.tsx
front/src/components/connect/: ConnectWallet.css  ConnectWallet.tsx  ConnectWalletExamples.css  ConnectWalletExamples.tsx
front/src/components/layout/: WalletLayout.css  WalletLayout.tsx
front/src/components/wallet/: Balance.tsx  History.tsx  Send.tsx  SessionKeys.css  SessionKeys.tsx
front/src/contexts/: ThemeContext.tsx
front/src/hooks/: useWalletBalance.ts  useWalletTransactions.ts  useWebSocketConnection.ts
front/src/providers/: WebSocketProvider.tsx
front/src/routes/: routes.tsx
front/src/services/: ConfigService.ts  IndexerService.ts  NodeService.ts  SessionKeyService.ts  WebSocketService.ts  config.ts
front/src/styles/: components.css
front/src/types/: hyle-wallet-src.d.ts  hyle-wallet.d.ts  wallet.ts
front/src/utils/: errorMessages.ts
hyle-wallet/: .env  bun.lockb  index.html  lib.ts  package-lock.json  package.json
hyle-wallet/src/: index.ts  vite-env.d.ts
hyle-wallet/src/components/: HyleWallet.css  HyleWallet.tsx
hyle-wallet/src/components/auth/: AuthForm.tsx
hyle-wallet/src/hooks/: useConfig.ts  useSessionKey.ts  useWallet.tsx
hyle-wallet/src/providers/: AuthProviderManager.ts  BaseAuthProvider.ts  GoogleAuthProvider.ts  PasswordAuthProvider.ts
hyle-wallet/src/services/: IndexerService.ts  NodeService.ts  SessionKeyService.ts  WalletOperations.ts  WebSocketService.ts  config.ts
hyle-wallet/src/types/: login.ts  wallet.ts
hyli-wallet/: README.md  bun.lockb  index.html  lib.ts  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
hyli-wallet-vue/: package.json
hyli-wallet-vue/src/components/: AuthForm.vue  HyliWallet.vue  WalletProvider.vue
hyli-wallet-vue/src/composables/: useWallet.ts
hyli-wallet/src/: index.ts
hyli-wallet/src/components/: HyleWallet.css  HyleWallet.tsx  HyliWallet.css  HyliWallet.tsx
hyli-wallet/src/components/auth/: AuthForm.css  AuthForm.tsx  QRCodeDisplay.css  QRCodeDisplay.tsx
hyli-wallet/src/hooks/: useWallet.tsx
hyli-wallet/src/providers/: AuthProviderManager.ts  BaseAuthProvider.ts  EthereumWalletAuthProvider.ts  GoogleAuthProvider.ts  HyliAppAuthProvider.ts  MetamaskAuthProvider.ts  PasswordAuthProvider.ts  ethereumProviders.ts
hyli-wallet/src/services/: ConfigService.ts  IndexerService.ts  NodeService.ts  QRSigningService.ts  SessionKeyService.ts  WalletOperations.ts  WebSocketService.ts
hyli-wallet/src/types/: auth.ts  ethereum.ts  login.ts  provider.ts  wallet.ts
hyli-wallet/src/utils/: ed25519.ts  errorMessages.ts  google.ts  hash.ts  jwt.ts  jwt_circuit.ts  keccak.ts  lazy-modules.ts  secp256k1.ts
hyli-wallet/vue/: package.json  vite.config.ts
hyli-wallet/vue/demo/: package.json
hyli-wallet/vue/demo/src/: App.vue
hyli-wallet/vue/src/: App.vue  lib.ts
hyli-wallet/vue/src/components/: AuthForm.vue  HyliWallet.vue  WalletProvider.vue  WebComponent.ce.vue
hyli-wallet/vue/src/composables/: useEthereumProviders.ts  useWallet.ts
jwt/: Nargo.toml  Prover.toml
jwt/src/: main.nr
script/: .gitignore  README.md  bun.lockb  config.example.js  example-usage.js  hyli-wallet.js  hyli-wallet.ts  llms-full.txt  llms.txt  package-lock.json  package.json  tsconfig.json
server/: Cargo.toml
server/src/: app.rs  autoprovers.rs  conf.rs  conf_defaults.toml  history.rs  init.rs  lib.rs  main.rs  prover.rs  sdk_wallet.rs  websocket.rs
server/src/invites/: invite.rs
server/src/signing/: mod.rs  signing.rs
vue-demo/: package.json  vite.config.ts
vue-demo/src/: App.vue
