[workspace]
resolver = "2"
members = ["contracts", "contracts/wallet", "server"]

[workspace.dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-contract-sdk", tag = "v0.13.1" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", default-features = false, package = "hyle-client-sdk", tag = "v0.13.1" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-smt-token", tag = "v0.13.1" }
hyle-modules = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-modules", tag = "v0.13.1" }


contracts = { path = "contracts", default-features = false, package = "contracts" }
wallet = { path = "contracts/wallet", package = "wallet" }
sha2 = "0.10.8"

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# boundless-market = { git = "https://github.com/Hyle-org/boundless.git" }

# [patch."https://github.com/Hyle-org/hyle"]
# hyle-contract-sdk = { path = "../hyle/crates/contract-sdk", package = "hyle-contract-sdk" }
# hyle-client-sdk = { path = "../hyle/crates/client-sdk", package = "hyle-client-sdk" }
# hyle-smt-token = { path = "../hyle/crates/contracts/smt-token", package = "hyle-smt-token" }
# hyle-modules = { path = "../hyle/crates/hyle-modules", package = "hyle-modules" }
