[workspace]
resolver = "2"
members = ["contracts", "contracts/wallet", "server"]

[workspace.dependencies]
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "main" }
hyli-smt-token = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-smt-token", branch = "main" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "main", features = [
    "indexer",
] }
hyli-turmoil-shims = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-turmoil-shims", branch = "main" }

contracts = { path = "contracts", default-features = false, package = "contracts" }
wallet = { path = "contracts/wallet", package = "wallet" }
sha2 = "=0.10.9"                                                                    # pinned to a specific version via patch

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
# boundless-market = { git = "https://github.com/hyli-org/boundless.git" }

# [patch."https://github.com/hyli-org/hyli"]
# hyli-contract-sdk = { path = "../hyli/crates/contract-sdk", package = "hyli-contract-sdk" }
# hyli-client-sdk = { path = "../hyli/crates/client-sdk", package = "hyli-client-sdk" }
# hyli-smt-token = { path = "../hyli/crates/contracts/smt-token", package = "hyli-smt-token" }
# hyli-modules = { path = "../hyli/crates/hyli-modules", package = "hyli-modules" }
