[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["risc0", "rest"] }
hyle = { workspace = true }
contract1 = { workspace = true, features = ["client"] }
contract2 = { workspace = true, features = ["client"] }
# Remove features if you want reproducible builds with docker
contracts = { workspace = true, features = ["nonreproducible"] }

risc0-zkvm = { version = "2.0.0", features = ["prove"] }

axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
secp256k1 = { version = "0.30.0", features = ["hashes"] }

rand = "0.9.0"
borsh = "1.5.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = "4.5.28"
utoipa-axum = { version = "0.2.0" }
utoipa = "5.3.1"

opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"
prometheus = { version = "0.13.4" }


zip = "=2.3.0"
risc0-binfmt = "2.0.0"
risc0-circuit-keccak = "2.0.0"
risc0-zkp = "2.0.0"
risc0-circuit-keccak-sys = "2.0.0"
risc0-circuit-recursion = "2.0.0"
risc0-sys = "1.4.0"
risc0-circuit-recursion-sys = "2.0.0"
risc0-groth16 = "2.0.0"
