[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["risc0", "rest"] }
wallet = { workspace = true, features = ["client"] }
hyle-smt-token = { workspace = true, features = ["client"] }
hyle-modules = { workspace = true }
# Remove features if you want reproducible builds with docker
contracts = { workspace = true, features = ["all"] }

config = { version = "0.15.11", default-features = false, features = ["toml"] }
borsh = "1.5.7"
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
hex = "0.4.3"

tracing = "0.1.41"
tracing-subscriber = "0.3"
clap = { version = "4.2", features = ["derive"] }

opentelemetry = { version = "0.28" }
opentelemetry_sdk = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28" }
prometheus = { version = "0.13.4" }
rand = "0.9.0"
serde_json = "1.0.140"
futures = "0.3.31"

# Invite code dependencies
sha2 = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "chrono",
] }
chrono = "0.4.41"
secp256k1 = { version = "0.31.0" }

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber", "opentelemetry", "prometheus", "rand"]

[[bin]]
name = "autoprover"
path = "src/bin/autoprover.rs"
