[package]
name = "contract2"
edition = { workspace = true }
rust-version = "1.81"

[[bin]]
name = "contract2"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[[example]]
name = "contract2-runner"
path = "examples/host.rs"


[dependencies]
anyhow = "1.0.96"
sdk = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }


risc0-zkvm = { version = "2.0.0", default-features = false, optional = true, features = [
  'std',
] }
client-sdk = { workspace = true, default-features = false, features = [
  "risc0",
  "rest",
], optional = true }

[dev-dependencies]
# Active client feature for tests
contract2 = { path = ".", features = ["client"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }
risc0-zkvm = { version = "2.0.0", default-features = false, features = [
  'std',
  'prove',
] }

[features]
default = []
client = ["dep:client-sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
