[package]
name = "wallet"
edition = { workspace = true }

[[bin]]
name = "wallet"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }
hex = { version = "0.4.3" }

sdk = { workspace = true, features = ["tracing", "smt"] }
client-sdk = { workspace = true, default-features = false, features = [
  "indexer",
  "rest",
], optional = true }

sparse-merkle-tree = "0.6.1"
sha2 = { workspace = true }
serde_with = "3.13.0"        # Used in invite codes

risc0-zkvm = { version = "2.1", default-features = false, optional = true, features = [
  'std',
] }

[dev-dependencies]
# Active client feature for tests
wallet = { path = ".", features = ["client"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }
risc0-zkvm = { version = "2.1", default-features = false, features = [
  'std',
  'prove',
] }

[features]
default = []
client = ["dep:client-sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
